# alfred-client

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: ci.yml
alfred_client/: commands.py  hooks.py  install.py  modules.txt  smoke_fkb_tmp.py  test_alfred_settings.py  test_cas_race.py  test_communication.py  test_deploy.py  test_doctype_hooks.py  test_doctypes.py  test_dry_run_safety.py  test_escalation.py  test_framework_kg.py  test_frappe_kb.py  test_mcp.py  test_page.py  test_permissions.py  test_run_state.py  test_websocket_client.py  uninstall.py
alfred_client/api/: deploy.py  escalation.py  permissions.py  stale_cleanup.py  websocket_client.py
alfred_client/api/deploy/: __init__.py  _constants.py  _deployment.py  _rollback.py  _routing.py  (+2 more)
alfred_client/config/: desktop.py
alfred_client/data/: customization_patterns.yaml
alfred_client/mcp/: framework_kg.py  frappe_kb.py  query_builder.py  query_spec.py  server.py  tools.py  transport.py
alfred_client/scripts/: build_kb_apis.py
docs/: BENCH_CUSTOMIZATIONS.md  SECURITY.md  SETUP.md  admin-guide.md  architecture.md  benchmarking.md  data-model.md  debugging.md  developer-api.md  developing.md  getting-started.md  how-alfred-works.md  how-it-works.md  operations.md  reading-order.md  running.md  self-hosted-guide.md  user-guide.md
frontend-tests/: README.md  package.json  playwright.config.ts  tsconfig.json
frontend-tests/tests/: fixtures.ts  mode-switcher.spec.ts  preview-approve.spec.ts  refresh-survival.spec.ts  rollback.spec.ts  send-prompt.spec.ts
(+60 files in other folders)
