[project]
name = "alfred_client"
authors = [
	{ name = "Venkatesh" },
]
description = "AI-powered agent for building Frappe customizations through conversation"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
license = { text = "MIT" }

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["F", "E", "W", "I", "UP", "B", "RUF"]
ignore = ["B017", "B018", "B023", "B904", "E101", "E402", "E501", "E741", "F401", "F403", "F405", "F722", "W191", "RUF001"]
typing-modules = ["frappe.types.DF"]

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
docstring-code-format = true

[tool.ruff.lint.isort.sections]
"frappe" = ["frappe"]
"alfred_client" = ["alfred_client"]

[tool.ruff.lint.isort]
section-order = ["future", "standard-library", "third-party", "frappe", "alfred_client", "first-party", "local-folder"]

[tool.bench.frappe-dependencies]
frappe = ">=17.0.0-dev,<18.0.0"
